src/components/Services/Services.module.css
.services {
  width: 100vw;
  padding: 40px 0;
  scroll-margin-top: 100px;
}
.services_container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}
.title {
  font-weight: 600;
  font-size: 20px;
  text-align: center;
}
.list {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 343px;
  height: 209px;
  padding: 16px;
  border: 1px solid var(--accent);
  border-radius: 8px;
  overflow: hidden;
  cursor: pointer;
  transition: all 0.4s ease;
}

.card::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 40%;
  background: linear-gradient(to top, #a4d5d7, transparent);
  opacity: 0;
  transition: all 0.3s ease;
  pointer-events: none;
  border-radius: inherit;
}
.card:hover {
  transform: scale(1.03);
}
.card:hover::after {
  opacity: 1;
}
.TitleItem {
  font-weight: 500;
  font-size: 20px;
  text-align: center;
  margin-bottom: 12px;
}
.text {
  font-weight: 400;
  font-size: 18px;
  line-height: 160%;
}
.arrow {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 16px;
  right: 16px;
  background-color: transparent;
  border: transparent;
  color: transparent;
  border-radius: 50%;
  width: 34px;
  height: 34px;
  pointer-events: none;
  transition: all 0.3s ease;
}

.card:hover .arrow {
  border: 1px solid var(--accent);
  color: var(--accent);
}

/* ==== TABLET (768px+) ==== */
@media screen and (min-width: 744px) {
  .services {
    padding: 60px 0;
  }
  .services_container {
    gap: 60px;
  }
  .title {
    font-size: 30px;
  }
  .list {
    gap: 48px;
  }
  .card {
    width: 564px;
    height: 425px;
    padding: 56px 24px;
    border: 2px solid var(--accent);
    border-radius: 16px;
  }
  .card:hover .arrow {
    border: 2px solid var(--accent);
  }
  .TitleItem {
    font-size: 30px;
    margin-bottom: 48px;
  }
  .text {
    font-size: 28px;
  }
  .arrow {
    top: 24px;
    right: 24px;
    width: 48px;
    height: 48px;
  }
  .icon {
    width: 32px;
    height: 32px;
  }
}

/* ==== DESKTOP (1440px+) ==== */
@media screen and (min-width: 1440px) {
  .services {
    padding: 80px 0;
  }
  .services_container {
    gap: 80px;
  }
  .title {
    font-size: 40px;
  }
  .list {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 80px;
  }
  .card {
    width: calc(50% - 80px);
  }
  .TitleItem {
    font-size: 36px;
  }
  .text {
    font-size: 32px;
  }
}

